<resources>
    <string name="app_name">Tip Calculator</string>

    <string name="message_empty_field">Fill in all fields</string>
    <string name="message_zero_field">Value must be greater than 0</string>

    <string name="main_title">Tip Calculator</string>
    <string name="main_bill_amount">Enter the bill amount</string>
    <string name="main_bill_amount_hint">100,00</string>
    <string name="main_number_of_people">Enter the number of people</string>
    <string name="main_number_of_people_hint">2</string>
    <string name="main_tip_percentage">Enter the tip percentage</string>
    <string name="main_tip_percentage_hint">10</string>
    <string name="main_reset">Reset</string>
    <string name="main_calculate">Calculate</string>

    <string name="summary_title">Summary</string>
    <string name="summary_table_total">Table total</string>
    <string name="summary_number_of_people">Number of people</string>
    <string name="summary_tip_percentage">Tip percentage</string>
    <string name="summary_total_with_tip">Total with tip</string>
    <string name="summary_total_per_person">Total per person</string>
    <string name="summary_total_tip">Total tip</string>
    <string name="summary_recalculate">Recalculate</string>
</resources>